<resources>
    <string name="app_name">BMI</string>
    <string name="tLogo">calculate your BMI ...</string>
    <string name="mail">E-mail</string>
    <string name="psw">Password</string>

    <string name="fpsw">forget password?</string>
    <string name="title_activity_calculate">Calculate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="nom">Full Name</string>
    <string name="tel">Phone Number</string>
    <string name="cpsw">Confirm Password</string>
    <string name="Aexiste">Already have account ?</string>
    <string name="sup">Sign up</string>
    <string name="lin">Login </string>
    <string name="title_activity_calculate_img">CalculateImg</string>

    <string name="titre">Calculez Votre Indice De Masse Grasse (img)</string>
    <string name="femme">Woman</string>
    <string name="homme">Man</string>
    <string name="taille">Height</string>
    <string name="poids">"Weight "</string>
    <string name="age">Age</string>
    <string name="valide">Click here to Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>