<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    tools:context=".vue.SignUp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/wel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="Welecom!"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sign up to continue"
        android:textColor="#393636"
        android:textSize="20dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nom"
        app:boxBackgroundColor="#F8F7F6"
        app:boxCornerRadiusBottomEnd="33dp"
        app:boxCornerRadiusBottomStart="33dp"
        app:boxCornerRadiusTopStart="33dp"
        app:errorEnabled="true"
        app:errorTextColor="#A1093D"
        app:hintTextColor="@color/black"

        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/tel"
        app:boxBackgroundColor="#F8F7F6"
        app:boxCornerRadiusBottomEnd="33dp"
        app:boxCornerRadiusBottomStart="33dp"
        app:boxCornerRadiusTopStart="33dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="#A1093D"

        app:startIconDrawable="@android:drawable/stat_sys_phone_call">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/mail"
        app:boxBackgroundColor="#F8F7F6"
        app:boxCornerRadiusBottomEnd="33dp"
        app:boxCornerRadiusBottomStart="33dp"
        app:boxCornerRadiusTopStart="33dp"
        app:errorEnabled="true"
        app:errorTextColor="#A1093D"
        app:hintTextColor="@color/black"

        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:inputType="textEmailSubject" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pswSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:hint="@string/psw"
        app:boxBackgroundColor="#F8F7F6"
        app:boxCornerRadiusBottomEnd="33dp"
        app:boxCornerRadiusBottomStart="33dp"
        app:boxCornerRadiusTopStart="33dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="#A1093D"

        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:inputType="textPassword"


            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/cpsw"
        app:boxBackgroundColor="#F8F7F6"
        app:boxCornerRadiusBottomEnd="33dp"
        app:boxCornerRadiusBottomStart="33dp"
        app:boxCornerRadiusTopStart="33dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="#A1093D"

        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:inputType="textPassword"


            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/bSignup"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_button"
        android:text="@string/sup"
        android:onClick="onClickSignup"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ns"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Aexiste"
            android:textColor="@color/col4"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lin"
            android:clickable="true"
            android:onClick="clickText"
            android:textStyle="bold"
            android:textColor="@color/col4"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>